# scrap

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pypeline.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: EP-001.md  EP-002.md  EP-003-plan.md  EP-003.md  specs.md
docs/stories/: 03_download_cache.md  04_extraction.md  05_bucket_management.md  06_install_orchestration.md  08_environment_config.md  10_test_fixtures.md  EP-001-01-update-models.md  EP-001-02-update-core-logic.md  EP-001-03-update-install-logic.md  EP-001-04-update-list-and-tests.md  EP-003-02-cache-collision.md  EP-003-05-testing-gaps.md
examples/: cmake.json  install_from_config.py  install_from_manifest.py  install_single_app.py
src/poks/: bucket.py  downloader.py  environment.py  extractor.py  main.py  platform.py  poker.py  poks.py  progress.py  resolver.py
src/poks/domain/: __init__.py  models.py
tests/: conftest.py  helpers.py  test_bucket.py  test_bucket_registry.py  test_conda_integration.py  test_downloader.py  test_environment.py  test_extractor.py  test_install.py  test_integration.py  test_list.py  test_list_installed.py  test_main.py  test_models.py  test_platform.py  test_poker.py  test_resolver.py  test_zephyr_integration.py
tests/data/: poks.json  ripgrep.json  riscv64-zephyr-elf.json
